# nn-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  nearest_neighbours.rs  utils.rs
src/metrics/: cosine_distance.rs  euclidean_distance.rs  manhattan_distance.rs  metric_factory.rs  mod.rs
src/types/: mod.rs
tests/: integration_tests.rs
tests/data/: test.json  test.nn
