[package]
name = "nn-rs"
version = "0.1.0"
authors = ["benjamin ellis <benjaminjellis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
nalgebra = {version = "0.29.0", features = ["rand", "serde-serialize"]}
serde_json = "1.0"
serde = "1.0"