[package]
name = "nn-rs"
version = "0.1.0"
description = "1D nearest neighbors for nalgebra github"
keywords = ["nearest", "neighbours", "nalgebra"]
repository = "https://github.com/benjaminjellis/nn-rs"
authors = ["benjamin ellis <benjaminjellis@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
nalgebra = {version = "0.29.0", features = ["rand", "serde-serialize"]}
serde_json = "1.0"
serde = "1.0"